<resources>
    <string name="app_name">C3 Pemulihan Kupang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">C3 Pemulihan Kupang</string>
    <string name="nav_header_subtitle">c3pemulihankupang.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_new">New</string>
    <string name="menu_podcast">Podcast</string>
    <string name="menu_event">Event</string>
    <string name="menu_giving">Giving</string>
    <string name="icon">icon</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>