<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.c3pemulihankupang.c3pemulihankupang.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_new"
        android:name="com.c3pemulihankupang.c3pemulihankupang.ui.menu_new.MenuNewFragment"
        android:label="@string/menu_new"
        tools:layout="@layout/menu_new_fragment" />

    <fragment
        android:id="@+id/nav_podcast"
        android:name="com.c3pemulihankupang.c3pemulihankupang.ui.podcast.PodcastFragment"
        android:label="@string/menu_podcast"
        tools:layout="@layout/podcast_fragment" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.c3pemulihankupang.c3pemulihankupang.ui.event.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/event_fragment" />

    <fragment
        android:id="@+id/nav_giving"
        android:name="com.c3pemulihankupang.c3pemulihankupang.ui.giving.GivingFragment"
        android:label="@string/menu_giving"
        tools:layout="@layout/giving_fragment" />
</navigation>